# MOwNiT2025

./: README.md
lab11/: Cargo.toml
lab11/src/: lib.rs  main.rs
lab6/: REPORT.md  lsi_search.py
lab6/text_search_engine/: Cargo.toml
lab6/text_search_engine/src/: corpus.rs  crawler.rs  main.rs  search.rs  svd.rs  vectorizer.rs
