[package]
name = "text_search_engine"
version = "0.1.0"
edition = "2024"
build = "build.rs"
[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1"
ndarray = "0.15"
ndarray-linalg = "0.16"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
scraper = "0.17"
url = "2"
rayon = "1.8"